# jamoma2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  STYLE.md
dependencies/Murmur3/foooo/foooo/: main.cpp
dependencies/Murmur3/foooo/foooo.xcodeproj/: project.pbxproj
dependencies/gtest/: gtest-internal.h
doc/: Doxyfile  logo.graffle
examples/: simple.cpp
examples/simple/: CMakeLists.txt  Makefile  simple.cpp
examples/simple.xcodeproj/: project.pbxproj
examples/simple/simple.xcodeproj/: project.pbxproj
include/: Jamoma.h
include/core/: JamomaAudioObject.h  JamomaDataspace.h  JamomaDataspaceAngle.h  JamomaDataspaceDistance.h  JamomaDataspaceGain.h  JamomaDataspaceNone.h  JamomaDataspacePosition.h  JamomaDataspaceSpeed.h  JamomaDataspaceTemperature.h  JamomaDataspaceTime.h  JamomaDistanceDataspace.h  JamomaGainDataspace.h  JamomaGenerator.h  JamomaGenerators.h  JamomaInterpolate.h  JamomaInterpolator.h  JamomaLimit.h  JamomaNotification.h  JamomaObject.h  JamomaParameter.h  JamomaPositionDataspace.h  JamomaQueue.h  JamomaSample.h  JamomaSpeedDataspace.h  JamomaTimeDataspace.h  JamomaUnitTest.h  JamomaVar.h
include/objects/: JamomaAllpass1.h  JamomaDcblock.h  JamomaDelay.h  JamomaGain.h  JamomaLimiter.h  JamomaLowpassFourPole.h  JamomaLowpassOnePole.h  JamomaOscillator.h  JamomaSampleBuffer.h  JamomaSync.h  JamomaUnitImpulse.h  JamomaWaveform.h  JamomaWhiteNoise.h
includes/: Jamoma.h  JamomaAudioObject.h  JamomaCircularStorage.h  JamomaDcblock.h  JamomaDelay.h  JamomaGain.h  JamomaLimiter.h  JamomaLowpassFourPole.h  JamomaLowpassOnePole.h  JamomaMessage.h  JamomaNoise.h  JamomaObject.h  JamomaOverdrive.h  JamomaParameter.h  JamomaSample.h  JamomaSymbol.h  JamomaUnitImpulse.h  JamomaUnitTest.h  JamomaValue.h  JamomaWhiteNoise.h
includes/core/: JamomaAudioObject.h  JamomaCircularStorage.h  JamomaDataspace.h  JamomaEvent.h  JamomaFunction.h  JamomaGainDataspace.h  JamomaInterpolate.h  JamomaLimits.h  JamomaMessage.h  JamomaNoneDataspace.h  JamomaNotification.h  JamomaObject.h  JamomaParameter.h  JamomaQueue.h  JamomaSample.h  JamomaTimeDataspace.h  JamomaUnitTest.h  JamomaValue.h  JamomaVar.h
src/filtered-noise-example/: CMakeLists.txt
src/sine-tone-example/: CMakeLists.txt  sine-tone-example.cpp
test/: UnitTest.cmake  coverage-report.sh
test/Allpass/: Allpass.cpp  CMakeLists.txt
test/AudioObject/: AudioObject.cpp  CMakeLists.txt
test/CircularStorage/: CircularStorage.cpp
test/Dataspace/: Dataspace.cpp
test/Dcblocker/: CMakeLists.txt
test/Delay/: Delay.cpp
test/Generator/: CMakeLists.txt  Generator.cpp  GeneratorTargetOutput.m
test/Interpolation/: Interpolation.cpp  InterpolationTargetOutput.m
test/Interpolator/: CMakeLists.txt  Interpolator.cpp  InterpolatorTargetOutput.m
test/Limiter/: CMakeLists.txt  Limiter.cpp
test/LowpassOnePole/: LowpassOnePole.cpp
test/Oscillator/: CMakeLists.txt  Oscillator.cpp  OscillatorTargetOutput.m
test/Phasor/: CMakeLists.txt  Phasor.cpp  PhasorTargetOutput.m
test/SampleBuffer/: CMakeLists.txt  SampleBuffer.cpp
test/SampleBundle/: SampleBundle.cpp
test/Sync/: CMakeLists.txt  Sync.cpp
test/UnitImpulse/: CMakeLists.txt
tests/: UnitTest.cmake
tests/Allpass/: Allpass.cpp
tests/AudioObject/: AudioObject.cpp
tests/CircularStorage/: CMakeLists.txt  CircularStorage.cpp  JamomaTest_CircularStorage.cpp  Makefile
tests/CircularStorage/JamomaTest_CircularStorage.xcodeproj/: project.pbxproj
tests/Comb/: CMakeLists.txt  Comb.cpp
tests/Dataspace/: CMakeLists.txt  Dataspace.cpp  Makefile
tests/Dataspace/JamomaTest_Dataspace.xcodeproj/: project.pbxproj
tests/Dcblocker/: CMakeLists.txt  Dcblocker.cpp  JamomaTest_Dcblocker.cpp  Makefile
tests/Dcblocker/JamomaTest_Dcblocker.xcodeproj/: project.pbxproj
tests/Delay/: CMakeLists.txt  Delay.cpp
tests/Gain/: CMakeLists.txt  Gain.cpp  JamomaTest_Gain.cpp  Makefile
tests/Gain/JamomaTest_Gain.xcodeproj/: project.pbxproj
tests/Interpolation/: CMakeLists.txt  Interpolation.cpp  InterpolationTargetOutput.m
tests/LowpassFourPole/: CMakeLists.txt  LowpassFourPole.cpp  LowpassFourPoleIR.m  Makefile
tests/LowpassFourPole/JamomaTest_LowpassFourPole.xcodeproj/: project.pbxproj
tests/LowpassOnePole/: CMakeLists.txt  JamomaTest_LowpassOnePole.cpp  LowpassOnePole.cpp  Makefile
tests/LowpassOnePole/JamomaTest_LowpassOnePole.xcodeproj/: project.pbxproj
tests/Phasor/: CMakeLists.txt  JamomaTest_Phasor.cpp  Makefile  Phasor.cpp  PhasorTargetOutput.m
tests/Phasor/JamomaTest_Phasor.xcodeproj/: project.pbxproj
tests/SampleBundle/: CMakeLists.txt  JamomaTest_SampleBundle.cpp  Makefile  SampleBundle.cpp
tests/SampleBundle/JamomaTest_SampleBundle.xcodeproj/: project.pbxproj
tests/UnitImpulse/: CMakeLists.txt  JamomaTest_UnitImpulse.cpp  Makefile  UnitImpulse.cpp
tests/UnitImpulse/JamomaTest_UnitImpulse.xcodeproj/: project.pbxproj
tests/Var/: CMakeLists.txt  JamomaTest_Var.cpp  Makefile  Var.cpp
tests/Var/JamomaTest_Var.xcodeproj/: project.pbxproj
