cmake_minimum_required(VERSION 3.0)

add_subdirectory(examples/simple)

add_subdirectory(tests/CircularStorage)
add_subdirectory(tests/Dataspace)
add_subdirectory(tests/Dcblocker)
add_subdirectory(tests/Gain)
add_subdirectory(tests/LowpassFourPole)
add_subdirectory(tests/LowpassOnePole)
add_subdirectory(tests/Phasor)
add_subdirectory(tests/SampleBundle)
add_subdirectory(tests/UnitImpulse)
add_subdirectory(tests/Var)
